--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
             <input type="telefone" id="telefone" placeholder="Telefone">
             <input type="number" id="pedido" placeholder="Pedido">
             <input type="number" id="valor" placeholder="Valor">
+            <select name="setor" id="setor">
+                <option value="ecommerce">Ecommerce</option>
+                <option value="televendas">Televendas</option>
+            </select>
             <button id="add">Add</button>
             <button id="make">Gerar</button>
         </form>
